my profile page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <h1>Hello, I'm Jasan</h1>
       <img id="profile" src="images/Jasan.jpg" alt="Jasan's profile photo">
       <p>I'm an interactive designer, a creative coder and multimedia editor who just loves to create visuals and graphics according to what I imagine of and help people figure out on their visual identity.</p>
-      <a id="btn-aqua" href="https://www.waldura.net/" target="_blank"> Check my portfolio</a>
+      <a id="btn" href="https://www.waldura.net/" target="_blank"> Check my portfolio</a>
     </div>
 
     <div>
